# HomeController

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
components/ds18x20/: CMakeLists.txt  idf_component.yml
components/ds18x20/include/: ds18x20.h  ds18x20_types.h
components/ds18x20/src/: ds18x20.c
main/: CMakeLists.txt  ConfigurationScript.html  FirmwareScript.html  HTTPServerHC.c  HTTPServerHC.h  HomeControl.c  HomeControl.c.old  HomeControlTypes.h  RingBufferHC.c  RingBufferHC.h  Test.html  configuration.html  default.html  upload_script.html
